--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,10 +69,10 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-10 col-lg-8">
-                                    <h1 class="display-3 text-white animated slideInDown mb-4">Find The Perfect Job That You Deserved</h1>
-                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                    <h1 class="display-3 text-white animated slideInDown mb-4">Find The Perfect Job That You Deserve</h1>
+                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">Your unique perspective and experiences can bring fresh ideas to the table. Embrace your uniqueness!</p>
                                     <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Search A Job</a>
-                                    <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Find A Talent</a>
+                                    <a href="uploadResume" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Find A Talent</a>
                                 </div>
                             </div>
                         </div>
@@ -84,10 +84,10 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-10 col-lg-8">
-                                    <h1 class="display-3 text-white animated slideInDown mb-4">Find The Best Startup Job That Fit You</h1>
-                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                    <h1 class="display-3 text-white animated slideInDown mb-4">Find The Best Job That Fits You</h1>
+                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">The world needs your talents and contributions. Keep shining..</p>
                                     <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Search A Job</a>
-                                    <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Find A Talent</a>
+                                    <a href="uploadResume" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Find A Talent</a>
                                 </div>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                 <h1 class="text-center mb-5 wow fadeInUp "  data-wow-delay="0.1s">Explore By Category</h1>
                 <div class="row g-4">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp"  data-wow-delay="0.1s" >
-                        <a class="cat-item rounded p-4" id="mask-button" onclick="buttonPressed()">
+                        <a class="cat-item rounded p-4" id="mask-button" onclick="buttonPressed()"  style="cursor: pointer;">
                             <i class="fa fa-3x fa-book-reader text-primary mb-4"></i>
                             <h6 class="mb-3">Reading Mask</h6>
                         </a>
