--- a/views/addposition.ejs
+++ b/views/addposition.ejs
@@ -103,9 +103,9 @@
         </div>
         <div>
             <div class="class9">
-                <form id="myFrom21" method='post' action='/addproduct' enctype="multipart/form-data">
+                <form id="myFrom21" method='post' action='/addposition' enctype="multipart/form-data">
                     <section id="addtitle" class="addtitle" style="display: flex; margin-left: -13%;">
-                        <label class="custum-file-upload" for="file">
+                        <label class="custum-file-upload" id="custum-file-upload" for="file">
                             <div class="icon">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="" viewBox="0 0 24 24"><g stroke-width="0" id="SVGRepo_bgCarrier"></g><g stroke-linejoin="round" stroke-linecap="round" id="SVGRepo_tracerCarrier"></g><g id="SVGRepo_iconCarrier"> <path fill="" d="M10 1C9.73478 1 9.48043 1.10536 9.29289 1.29289L3.29289 7.29289C3.10536 7.48043 3 7.73478 3 8V20C3 21.6569 4.34315 23 6 23H7C7.55228 23 8 22.5523 8 22C8 21.4477 7.55228 21 7 21H6C5.44772 21 5 20.5523 5 20V9H10C10.5523 9 11 8.55228 11 8V3H18C18.5523 3 19 3.44772 19 4V9C19 9.55228 19.4477 10 20 10C20.5523 10 21 9.55228 21 9V4C21 2.34315 19.6569 1 18 1H10ZM9 7H6.41421L9 4.41421V7ZM14 15.5C14 14.1193 15.1193 13 16.5 13C17.8807 13 19 14.1193 19 15.5V16V17H20C21.1046 17 22 17.8954 22 19C22 20.1046 21.1046 21 20 21H13C11.8954 21 11 20.1046 11 19C11 17.8954 11.8954 17 13 17H14V16V15.5ZM16.5 11C14.142 11 12.2076 12.8136 12.0156 15.122C10.2825 15.5606 9 17.1305 9 19C9 21.2091 10.7909 23 13 23H20C22.2091 23 24 21.2091 24 19C24 17.1305 22.7175 15.5606 20.9844 15.122C20.7924 12.8136 18.858 11 16.5 11Z" clip-rule="evenodd" fill-rule="evenodd"></path> </g></svg>
                             </div>
@@ -114,6 +114,7 @@
                                </div>
                                <input type="file" id="file">
                             </label>
+                            <img id="uploaded-image" class="custum-file-upload" src="#" alt="Uploaded Image" style="display: none;">
                             
                         <div class="class12 editt12">
                             <div class="class13">
@@ -121,12 +122,12 @@
                                     <span class="spano">Company Name *</span>
                                 </label>
                                 <div class="inputo editt">
-                                    <input id="title" name="title" spellcheck="false" class="inputo2"
+                                    <input id="CompanyName" name="title" spellcheck="false" class="inputo2"
                                         maxlength="70" autocomplete="nope" value
                                         placeholder="Enter Company Name">
                                 </div>
                                 <div class="inputo3">
-                                    <div id='titleErr' class='err margin00'></div>
+                                    <div id='CompanyErr' class='err margin00'></div>
                                 </div>
                             </div>
                         </div>
@@ -186,6 +187,7 @@
                             </div>
                         </div>
                     </section>
+                    
                     <section id="addtitle" class="addtitle">
                         <div class="class12">
                             <div class="class13">
@@ -193,12 +195,12 @@
                                     <span class="spano">Salary Range *</span>
                                 </label>
                                 <div class="inputo">
-                                    <input id="title" name="title" spellcheck="false" class="inputo2"
+                                    <input id="Salary" name="title" spellcheck="false" class="inputo2"
                                         maxlength="70" autocomplete="nope" value
                                         placeholder="Salary Range (MIN/MAX)">
                                 </div>
                                 <div class="inputo3">
-                                    <div id='titleErr' class='err margin00'></div>
+                                    <div id='Salaryerr' class='err margin00'></div>
                                 </div>
                             </div>
                         </div>
@@ -216,7 +218,12 @@
                         <div id='descriptionErr' class='err margin1'></div>
 
                     </section>
+                    <div class="skillsContainer">
+                        <div id="skillsContainer">
 
+                        </div>
+                    </div>
+                   
                     <div class="class12 class13" style="margin-top: 8%;">
                         <div class="class13">
                             <label for="Name" class="labol">
@@ -224,14 +231,13 @@
                             </label>
                             <div class="calssflex">
                                 <div class="inputo onwidth">
-                                    <input type="text" id="placeInput" class="inputo2"
-                                        placeholder="Enter Skills Needed" />
+                                    <input type="text" id="Skills" class="inputo2" placeholder="Enter Skills Needed" />
                                 </div>
-                                <button type="button" class="btnsearch" onclick="searchPlace()">ADD</button>
+                                <button type="button" class="btnsearch" onclick="addSkill()">ADD</button>
                             </div>
                         </div>
                     </div>
-
+                
                     <section id="adddetails" class="adddetails">
                         <div class="class12 class13 marginss1">
                             <span>
@@ -242,9 +248,9 @@
                                     <div class="radio3"></div>
                                     <label for="Rooms" class="spano2">Position Need:</label>
                                     <div class="radio-input">
-                                        <input type="radio" id="value-8" name="value3-radio" value="1">
+                                        <input type="radio" id="value-8" name="value3-radio" value="Junior">
                                         <label for="value-8">Junior</label>
-                                        <input type="radio" id="value-9" name="value3-radio" value="2">
+                                        <input type="radio" id="value-9" name="value3-radio" value="Senior">
                                         <label for="value-9">Senior</label>
                                     </div>
                                 </div>
@@ -254,11 +260,11 @@
                                     <div class="radio3"></div>
                                     <label for="BathRooms" class="spano2">Work Models:</label>
                                     <div class="radio-input">
-                                        <input type="radio" id="value-1" name="value-radio" value=1>
+                                        <input type="radio" id="value-1" name="value-radio" value="OnSite">
                                         <label for="value-1"> OnSite</label>
-                                        <input type="radio" id="value-2" name="value-radio" value=2>
+                                        <input type="radio" id="value-2" name="value-radio" value="Hybrid">
                                         <label for="value-2">Hybrid</label>
-                                        <input type="radio" id="value-3" name="value-radio" value=3>
+                                        <input type="radio" id="value-3" name="value-radio" value="Remotely">
                                         <label for="value-3">Remotely</label>
                                     </div>
                                 </div>
@@ -268,13 +274,13 @@
                                         <div class="radio3"></div>
                                         <label for="Rooms" class="spano2">Disability:</label>
                                         <div class="radio-input">
-                                            <input type="radio" id="value-4" name="value2-radio" value="1">
+                                            <input type="radio" id="value-4" name="value2-radio" value="Blind">
                                             <label for="value-4">Blind</label>
-                                            <input type="radio" id="value-5" name="value2-radio" value="2">
+                                            <input type="radio" id="value-5" name="value2-radio" value="Deaf">
                                             <label for="value-5">Deaf</label>
-                                            <input type="radio" id="value-6" name="value2-radio" value="3">
+                                            <input type="radio" id="value-6" name="value2-radio" value="Autism">
                                             <label for="value-6">Autism</label>
-                                            <input type="radio" id="value-7" name="value2-radio" value="4">
+                                            <input type="radio" id="value-7" name="value2-radio" value="Color Blind">
                                             <label for="value-7"> Color Blind</label>
                                         </div>
 
@@ -301,14 +307,70 @@
 </div>
 
 
-
-
-
-
-
-
-
-
    
 </body>
 </html>
+
+<script>
+    document.getElementById('file').addEventListener('change', function (e) {
+    const uploadedImage = document.getElementById('uploaded-image');
+    const imageframe=document.getElementById("custum-file-upload");
+    const file = e.target.files[0];
+
+    if (file) {
+        // Display the selected image
+        uploadedImage.style.display = 'flex';
+        uploadedImage.style.padding="1rem";
+        imageframe.style.display="none";
+        uploadedImage.src = URL.createObjectURL(file);
+    } else {
+        // If no file is selected, hide the image
+        uploadedImage.style.display = 'none';
+        uploadedImage.src = '#'; // Clear the image source
+    }
+});
+let number12=450;
+let i=2;
+let count=0;
+function addSkill() {
+    // Get the value from the input field
+    var skill = document.getElementById("Skills").value;
+
+    // Create a new span element for the skill
+    var skillSpan = document.createElement("span");
+    skillSpan.textContent = skill;
+
+    // Append the span to the skillsContainer
+    var skillsContainer = document.getElementById("skillsContainer");
+    skillsContainer.appendChild(skillSpan);
+
+    // Clear the input field after adding the skill
+    document.getElementById("Skills").value = "";
+
+    // Check if the total width of spans exceeds 600px
+    let totalWidth = 0;
+    var spans = skillsContainer.querySelectorAll('span');
+    var ko2;
+    spans.forEach(function (span) {
+        totalWidth += span.offsetWidth + parseInt(getComputedStyle(span).marginRight);
+
+    });
+
+    // If total width exceeds 600px, add a line break (up to 4 times)
+    if (totalWidth > number12) {
+        for (var i = 0; i < 2; i++) {
+            skillsContainer.appendChild(document.createElement('br')); 
+        } 
+        count++;
+        number12*=i; 
+        i+=0.2;
+
+        
+        
+    }
+   
+}
+
+
+
+</script>
