--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,10 +69,10 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-10 col-lg-8">
-                                    <h1 class="display-3 text-white animated slideInDown mb-4">Find The Perfect Job That You Deserve</h1>
-                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">Your unique perspective and experiences can bring fresh ideas to the table. Embrace your uniqueness!</p>
-                                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Search A Job</a>
-                                    <a href="uploadResume" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Find A Talent</a>
+                                    <h1  class="display-3 text-white animated slideInDown mb-4 reading12">Find The Perfect Job That You Deserve</h1>
+                                    <p class="fs-5 fw-medium text-white mb-4 pb-2 reading12">Your unique perspective and experiences can bring fresh ideas to the table. Embrace your uniqueness!</p>
+                                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft reading12">Search A Job</a>
+                                    <a href="uploadResume" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight reading12">Find A Talent</a>
                                 </div>
                             </div>
                         </div>
@@ -84,10 +84,10 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-10 col-lg-8">
-                                    <h1 class="display-3 text-white animated slideInDown mb-4">Find The Best Job That Fits You</h1>
-                                    <p class="fs-5 fw-medium text-white mb-4 pb-2">The world needs your talents and contributions. Keep shining..</p>
-                                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Search A Job</a>
-                                    <a href="uploadResume" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Find A Talent</a>
+                                    <h1 class="display-3 text-white animated slideInDown mb-4 reading12">Find The Best Job That Fits You</h1>
+                                    <p class="fs-5 fw-medium text-white mb-4 pb-2 reading12">The world needs your talents and contributions. Keep shining..</p>
+                                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft reading12">Search A Job</a>
+                                    <a href="uploadResume" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight reading12">Find A Talent</a>
                                 </div>
                             </div>
                         </div>
@@ -109,24 +109,24 @@
                             </div>
                             <div class="col-md-4">
                                 <select class="form-select border-0">
-                                    <option selected>Category</option>
-                                    <option value="1">Category 1</option>
-                                    <option value="2">Category 2</option>
-                                    <option value="3">Category 3</option>
+                                    <option class="reading12" selected>Category</option>
+                                    <option class="reading12" value="1">Category 1</option>
+                                    <option class="reading12" value="2">Category 2</option>
+                                    <option class="reading12" value="3">Category 3</option>
                                 </select>
                             </div>
                             <div class="col-md-4">
                                 <select class="form-select border-0">
-                                    <option selected>Location</option>
-                                    <option value="1">Location 1</option>
-                                    <option value="2">Location 2</option>
-                                    <option value="3">Location 3</option>
+                                    <option class="reading12" selected>Location</option>
+                                    <option class="reading12" value="1">Location 1</option>
+                                    <option class="reading12" value="2">Location 2</option>
+                                    <option class="reading12" value="3">Location 3</option>
                                 </select>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-2">
-                        <button class="btn btn-dark border-0 w-100">Search</button>
+                        <button  class="btn btn-dark border-0 w-100 reading12">Search</button>
                     </div>
                 </div>
             </div>
@@ -138,55 +138,55 @@
         <!-- Category Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <h1 class="text-center mb-5 wow fadeInUp "  data-wow-delay="0.1s">Explore By Category</h1>
+                <h1 class="text-center mb-5 wow fadeInUp reading12 "  data-wow-delay="0.1s">Explore By Category</h1>
                 <div class="row g-4">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp"  data-wow-delay="0.1s" >
                         <a class="cat-item rounded p-4" id="mask-button" onclick="buttonPressed()"  style="cursor: pointer;">
                             <i class="fa fa-3x fa-book-reader text-primary mb-4"></i>
-                            <h6 class="mb-3">Reading Mask</h6>
+                            <h6 class="mb-3 reading12">Reading Mask</h6>
                         </a>
                       
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                         <a class="cat-item rounded p-4" href="">
                             <i class="fa fa-3x fa-headset text-primary mb-4"></i>
-                            <h6 class="mb-3">Customer Service</h6>
+                            <h6 class="mb-3 reading12">Customer Service</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                         <a class="cat-item rounded p-4" href="">
-                            <i class="fa fa-3x fa-user-tie text-primary mb-4"></i>
-                            <h6 class="mb-3">Human Resource</h6>
+                            <i class="fa-solid fa-volume-high"></i>
+                            <h6 class="mb-3 reading12">Human Resource</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                         <a class="cat-item rounded p-4" href="">
                             <i class="fa fa-3x fa-tasks text-primary mb-4"></i>
-                            <h6 class="mb-3">Project Management</h6>
+                            <h6 class="mb-3 reading12">Project Management</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                         <a class="cat-item rounded p-4" href="">
                             <i class="fa fa-3x fa-chart-line text-primary mb-4"></i>
-                            <h6 class="mb-3">Business Development</h6>
+                            <h6 class="mb-3 reading12">Business Development</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                         <a class="cat-item rounded p-4" href="">
                             <i class="fa fa-3x fa-hands-helping text-primary mb-4"></i>
-                            <h6 class="mb-3">Sales & Communication</h6>
+                            <h6 class="mb-3 reading12">Sales & Communication</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                         <a class="cat-item rounded p-4" href="">
                             <i class="fa fa-3x fa-book-reader text-primary mb-4"></i>
-                            <h6 class="mb-3">Teaching & Education</h6>
+                            <h6 class="mb-3 reading12">Teaching & Education</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                         <a class="cat-item rounded p-4" href="">
                             <i class="fa fa-3x fa-drafting-compass text-primary mb-4"></i>
-                            <h6 class="mb-3">Design & Creative</h6>
+                            <h6 class="mb-3 reading12">Design & Creative</h6>
                         </a>
                     </div>
                 </div>
@@ -216,12 +216,12 @@
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeIn " data-wow-delay="0.5s">
-                        <h1 class="mb-4">We Help To Get The Best Job And Find A Talent</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
-                        <a class="btn btn-primary py-3 px-5 mt-3" href="">Read More</a>
+                        <h1 class="mb-4 reading12">We Help To Get The Best Job And Find A Talent</h1>
+                        <p class="mb-4 reading12">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Tempor erat elitr rebum at clita</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Aliqu diam amet diam et eos</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Clita duo justo magna dolore erat amet</p>
+                        <a class="btn btn-primary py-3 px-5 mt-3 reading12" href="">Read More</a>
                     </div>
                 </div>
             </div>
@@ -232,22 +232,22 @@
         <!-- Jobs Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Job Listing</h1>
+                <h1 class="text-center mb-5 wow fadeInUp reading12" data-wow-delay="0.1s">Job Listing</h1>
                 <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
                     <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
                         <li class="nav-item">
                             <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 active" data-bs-toggle="pill" href="#tab-1">
-                                <h6 class="mt-n1 mb-0">Featured</h6>
+                                <h6 class="mt-n1 mb-0 reading12">Featured</h6>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#tab-2">
-                                <h6 class="mt-n1 mb-0">Onsite</h6>
+                                <h6 class="mt-n1 mb-0 reading12">Onsite</h6>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#tab-3">
-                                <h6 class="mt-n1 mb-0">Offsite</h6>
+                                <h6 class="mt-n1 mb-0 reading12">Offsite</h6>
                             </a>
                         </li>
                     </ul>
@@ -406,19 +406,19 @@
                 </div>
             </div>
         </div>
-        <!-- Testimonial End -->
+    
         
 
-        <!-- Footer Start -->
+      
         <%-include("partials/footer.ejs")%> 
-        <!-- Footer End -->
+        
 
 
-        <!-- Back to Top -->
+        
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
 
-         <!-- JavaScript Libraries -->
+       
      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
      <script src="/lib/wow/wow.min.js"></script>
@@ -426,9 +426,10 @@
      <script src="/lib/waypoints/waypoints.min.js"></script>
      <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
  
-     <!-- Template Javascript -->
+     
      <script src="/js/main.js"></script>
      <script src="/js/readingMask.js"></script>
+     <script src="./js/screen_reader.js"></script>
  
     
 
