--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,18 +7,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="/" class="nav-item nav-link active">Home</a>
-            <a href="" class="nav-item nav-link">About</a>
-            <a href="/uploadResume" class="nav-item nav-link">Upload Resume</a>
+            <a href="/" class="nav-item nav-link active reading12 ">Home</a>
+            <a href="" class="nav-item nav-link reading12">About</a>
+            <a href="/uploadResume" class="nav-item nav-link reading12">Upload Resume</a>
             <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Jobs</a>
+                <a href="#" class="nav-link dropdown-toggle reading12" data-bs-toggle="dropdown">Jobs</a>
                 <div class="dropdown-menu rounded-0 m-0">
-                    <a href="/appliedfor" class="dropdown-item">Job List</a>
-                    <a href="" class="dropdown-item">Job Detail</a>
+                    <a href="/appliedfor" class="dropdown-item reading12">Job List</a>
+                    <a href="" class="dropdown-item reading12">Job Detail</a>
                 </div>
             </div>
-            <a href="" class="nav-item nav-link">Contact</a>
+            <a href="" class="nav-item nav-link reading12">Contact</a>
         </div>
-        <a href="reg" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block" id="changable">Registration <i class="fa fa-arrow-right ms-3"></i></a>
+        <a href="reg" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block reading12" id="changable">Registration <i class="fa fa-arrow-right ms-3"></i></a>
     </div>
 </nav>
