--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
         <div class="container-fluid p-0">
             <div class="owl-carousel header-carousel position-relative">
                 <div class="owl-carousel-item position-relative">
-                    <img class="img-fluid" src="/img/carousel-1.jpg" alt="">
+                    <img class="img-fluid" src="/img/bg-2.jpg" alt="Background Image" style="height:620px">
                     <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(43, 57, 64, .5);">
                         <div class="container">
                             <div class="row justify-content-start">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="owl-carousel-item position-relative">
-                    <img class="img-fluid" src="/img/carousel-2.jpg" alt="">
+                    <img class="img-fluid" src="/img/bg-3.jpg" alt="Background Image" style="height:620px">
                     <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(43, 57, 64, .5);">
                         <div class="container">
                             <div class="row justify-content-start">
