--- a/views/index.ejs
+++ b/views/index.ejs
@@ -202,16 +202,16 @@
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                         <div class="row g-0 about-bg rounded overflow-hidden">
                             <div class="col-6 text-start">
-                                <img class="img-fluid w-100" src="/img/about-1.jpg">
+                                <img class="img-fluid w-100" src="/img/ab-1.jpg" style="height: 100%;">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid" src="/img/about-2.jpg" style="width: 85%; margin-top: 15%;">
+                                <img class="img-fluid" src="/img/ab-2.jpg" style="width: 90%; margin-top: 8%;height: 88%;">
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid" src="/img/about-3.jpg" style="width: 85%;">
+                                <img class="img-fluid" src="/img/ab-3.jpg" style="width: 90%;">
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid w-100" src="/img/about-4.jpg">
+                                <img class="img-fluid w-100" src="/img/ab-4.jpg" >
                             </div>
                         </div>
                     </div>
