--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel ="shortcut icon" type= "x-icon" href="/img/job.png"> 
     <link rel="stylesheet" href="/css/aside.css">
     <link rel="stylesheet" href="./css/fonts.css">
 
