--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
+    <link rel ="shortcut icon" type= "x-icon" href="/img/job.png"> 
     <link href="/img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
@@ -241,10 +242,10 @@
                     </div>
                     <div class="col-lg-6 wow fadeIn " data-wow-delay="0.5s">
                         <h1 class="mb-4 reading12">We Help To Get The Best Job And Find A Talent</h1>
-                        <p class="mb-4 reading12">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Tempor erat elitr rebum at clita</p>
-                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Clita duo justo magna dolore erat amet</p>
+                        <p class="mb-4 reading12">Leverage Supportive Resources: Make use of available resources and support networks</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Embrace Your Unique Abilities</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i>Leverage Supportive Resources</p>
+                        <p><i class="fa fa-check text-primary me-3 reading12"></i> Encourage employers to create diverse and accessible work environments</p>
                         <a class="btn btn-primary py-3 px-5 mt-3 reading12" href="">Read More</a>
                     </div>
                 </div>
