--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,6 +6,7 @@
     <title>User Profile</title>
     <!-- Favicon -->
     <link href="/img/favicon.ico" rel="icon">
+    <link rel ="shortcut icon" type= "x-icon" href="/img/job.png"> 
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
