--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -6,6 +6,7 @@
     <title>Registration</title>
       <!-- Favicon -->
       <link href="/img/favicon.ico" rel="icon">
+      <link rel ="shortcut icon" type= "x-icon" href="/img/disability.png"> 
 
       <!-- Google Web Fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
