--- a/views/applied-for.ejs
+++ b/views/applied-for.ejs
@@ -9,6 +9,7 @@
 
     <!-- Favicon -->
     <link href="/img/favicon.ico" rel="icon">
+    <link rel ="shortcut icon" type= "x-icon" href="/img/job.png"> 
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
