--- a/views/job-list.ejs
+++ b/views/job-list.ejs
@@ -10,6 +10,7 @@
 
     <!-- Favicon -->
     <link href="/img/favicon.ico" rel="icon">
+    <link rel ="shortcut icon" type= "x-icon" href="/img/disability.png"> 
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
